--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Luwein.GitHub.io by Luwein</title>
+    <title>Luwein.GitHub by Luwein</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Luwein.GitHub.io</h1>
+        <h1>Luwein.GitHub</h1>
         <p>古亭臣的博客</p>
         <p class="view"><a href="https://github.com/Luwein">View the Project on GitHub <small>Luwein</small></a></p>
         <ul>
